2004-01-10 Andy Ruder <aeruder at ksu dot edu>
 * Bundle Controller had a bug when dragging to bottom row

2004-01-05 Andy Ruder <aeruder at ksu dot edu>
 * Updated the server list
 * Made the server list realphabetize on startup
 * Moved defaults into external files and into separate bundles
 * Made Highlighting not screw up the preferences button in bundle setup

2003-12-30 Andy Ruder <aeruder at ksu dot edu>
 * Added the ability for bundles to register preferences with 
   GNUstepOutputBundle
 * Redid Bundle Configurator to use drag'n'drop
 * Finished Highlighting's preferences

2003-12-21 Andy Ruder <aeruder at ksu dot edu>
 * OFTC made it into the server list
 * made a change to the topic inspector that will hopefully make it
   look good on OSX

2003-12-19 Andy Ruder <aeruder at ksu dot edu>
 * Made /dcc a little more sane on the syntax.
 * Fixed some early deallocation bugs in delegate messages
 * fixed user list weirdness
 * fixed a server list bug when editing two different things

2003-12-17 Andy Ruder <aeruder at ksu dot edu>
 * Finished all .nibs, got Server list working as well as all the other
   things working on the OSX port.
 * Slightly modified bundle loading to search for bundles in the .app resource
   path.  Will make things simpler to produce distributable binary for
   TalkSoup at some other time for OSX.

2003-12-15 Andy Ruder <aeruder at ksu dot edu>
 * Lots of minor fixes to get OSX working.
 * Got Preferences, Bundle Setup, Channels, User lists working on OSX.
 * Made OSX port use the right directory for bundles (Application Support
   as opposed to ApplicationSupport)

2003-12-14 Andy Ruder <aeruder at ksu dot edu>
 * Bundle setup now auto applies its changes.

2003-12-13 Andy Ruder <aeruder at ksu dot edu>
 * I am a retard.  I did not realize that outlets do not have an automatic
   retain when assigned to the instance variable.  Therefore I should be
   releasing those things either!  The only reason it worked was due to a