@@ -402,6 +402,7 @@ GNUstepOutput *_GS_ = nil;
 
 		if (!name) return self;
 
+		[[bundlePreferences objectForKey: name] shouldHide];
 		[bundlePreferences removeObjectForKey: name];
 	}
 	else if (!aConnection)
